--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="welcome_message">
-        <h1>Welcome to Year 9 Quiz</h1>
+        <h1>Welcome to Year 9 Physics Quiz</h1>
     
     <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
