--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="welcome_message">
-        <h1>Welcome to Year 9 Physics Quiz</h1>
+        <h1>Welcome to Year 9 Physics</h1>
     
     <!-- start Quiz button -->
     <div class="start_btn"><button>Start Quiz</button></div>
@@ -42,7 +42,7 @@
     <!-- Quiz Box -->
     <div class="quiz_box">
         <header>
-            <div class="title">Awesome Quiz Application</div>
+            <div class="title">Quiz Application</div> 
             <div class="timer">
                 <div class="time_left_txt">Time Left</div>
                 <div class="timer_sec">120</div>
