--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
 </head>
 <body>
     <div class="welcome_message">
-        <h1>Welcome to Year 9 Physics Quiz</h1>
+        <h1 id="welcomeTitle">Welcome to Year 9 Quiz</h1>
+
+        <!-- Subject selection dropdown -->
+        <label for="subjectSelect">Select Subject:</label>
+        <select id="subjectSelect">
+            <option value="" selected>--select--</option>
+            <optgroup label="Science">
+                <option value="Phy">Physics</option>
+                <option value="Chem">Chemistry</option>
+                <option value="Biol">Biology</option>
+            </optgroup>
+            <option value="Math">Maths</option>
+            <option value="CS">Computer Science</option>
+            <option value="Eng">English</option>
+        </select>
     
         <!-- start Quiz button -->
-        <div class="start_btn"><button>Start Quiz</button></div>
+        <div class="start_btn"><button type="button">Start Quiz</button></div>
 
         <!-- Info Box -->
         <div class="info_box">
@@ -83,7 +97,7 @@
     </div>
 
     <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/questions.js" type="module"></script>
+    <!-- <script src="js/questions.js" type="module"></script> -->
 
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/script.js" type="module"></script>
