--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </select>
     
         <!-- start Quiz button -->
-        <div class="start_btn"><button type="button">Start Quiz</button></div>
+        <div class="start_btn"><button>Start Quiz</button></div>
 
         <!-- Info Box -->
         <div class="info_box">
